--- a/src/components/goal/GoalCard.css
+++ b/src/components/goal/GoalCard.css
@@ -31,7 +31,7 @@ h2,
 
 }
 
-#createEventBtn:hover {
+#createGoalBtn:hover {
     background-color: lightgray;
     border-radius: 10px;
     /* box-shadow: 0px 0px 10px black; */
